<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@mipmap/background"
    tools:context="com.example.www.nfcbusinesscardlocal.updatePicture">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Select Image"
                android:textColor="@color/white"
                android:background="@drawable/textview_border"
                android:textStyle="bold"
                android:padding="@dimen/lesspadding"
                android:textSize="@dimen/heading"
                android:drawableRight="@mipmap/images"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:padding="@dimen/padding">
            <ImageView
                android:id="@+id/image_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/btn_upload_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Upload image"
            android:padding="@dimen/lesspadding"
            android:textColor="@color/white"
            android:background="@drawable/textview_border"
            android:textStyle="bold"
            android:textSize="@dimen/heading"
            android:drawableRight="@mipmap/internet"/>
    </LinearLayout>
</RelativeLayout>
