...
            <ImageView
                android:id="@+id/avatarpic"
                android:layout_width="@dimen/profilePicture"
                android:layout_height="@dimen/profilepic"
                android:src="@drawable/ic_person"/>
            <Button
                android:id="@+id/btn_open_upload"
                android:layout_marginTop="25dp"
                android:layout_width="@dimen/signoutbtn"
                android:layout_height="@dimen/signoutbtn"
                android:background="@drawable/ic_change_image"
                />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/lesspadding"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
...
